--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -97,8 +97,98 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+@font-face {
+    font-family: RalewayRegular;
+    src: url("../fonts/Raleway-Regular.ttf");
+}
+@font-face {
+    font-family: RalewayBold;
+    src: url("../fonts/Raleway-Bold.ttf");
+}
 
 
+body{
+    margin:0;
+    font-family: RalewayRegular;
+}
+
+
+.wrapper{
+    width:1200px;
+    margin: 0 auto;
+}
+
+header{
+    background-color: #161618;
+    padding: 5px 0px;
+}
+
+
+.headerlogo, .headersearchbar, .headerbuttongroup{
+    display: inline-block;
+}
+
+.headerlogo{
+    width:22.5%;
+    margin-right:5%;
+}
+
+.headerlogo a, .headerlogo a img{
+    width:100%;
+}
+
+.headersearchbar{
+    width:40%;
+    margin-right:5%;
+}
+.headersearchbar input{
+    width:90%;
+    top: 1px;
+    left:4px;
+    position: relative;
+    outline: none;
+    border: 0px solid;
+    background:#e8e5e0;
+
+}
+
+.headersearchbar input, .headersearcbar button{
+    height: 40px;
+}
+
+.headersearchbar button{
+    width:9.1%;
+    background-color: #ffcf35;
+    height: 40px;
+
+
+}
+button img{
+    width:100%;
+
+}
+
+.headerbuttongroup{
+    width:26%;
+}
+
+.headerbuttongroup .cart{
+    width: 17.5%
+}
+button{
+    border:none;
+    font-family: RalewayBold;
+    background: transparent;
+    color: #e8e5e0;
+    cursor: pointer;
+}
+
+
+.coloredbutton{
+    background-color: #ffcf35;
+    padding: 2% 3%;
+    color: #161618;
+}
 
 
 
