views should work properly now

--- a/views/login.jade
+++ b/views/login.jade
@@ -26,4 +26,7 @@ block content
                     a(href='#') Forgot Your Password?
                 #create-account
                     a(href='/signup') Create An Account
+
+                    if isAuthenticated
+                        p you are already logged in lul
             .clearfix
