--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -10,6 +10,21 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
+.btn{
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 7px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 8px;
+}
+
+.row {
+    font-size: 10px;
+}
+
 html {
     color: #222;
     font-size: 1em;
