Fixes to shoppingcart

--- a/views/index.html
+++ b/views/index.html
@@ -31,6 +31,8 @@
     <section></section>
     <!-- Add your site or application content here <ul id="productlist">
      <a href="#" class="btn btn-default" role="button">Button</a>-->
+    <ul id="cart"></ul>
+
     <ul id="productlist"></ul>
     <p>Add Categories</p>
     <p>Display products to the right???</p>
@@ -65,37 +67,17 @@
                   });
      };
 
-
-    $(".btn").click(function() {
-            $.post( "/index.html", function( data ) {
-                $('#cart').html(data.id);
-            });
-
-    });
-
- /*   function updateCart(){
-        $.get("/index.html", function (data) {
-            $('#btn').onclick(data);
-
-        });
-    };
-
-    $(document).ready(function () {
-        //your code here
-        $(".btn").click(function() {
-            doCart();
+    $(document).ready(function(){
+        $(".btn").click(function(){
+            $.post("/index.html",
+                {
+                    productID: this.id
+                },
+                function(data){
+                    $('#cart').html(data);
+                });
         });
     });
-        $(".btn").click(function() {
-        function doCart(){
-
-            $.post( "/index.html", function( data ) {
-                $('#cart').html(data.id);
-            });
-
-        };
-    });
-    */
 
 </script>
 </body>
