--- a/views/index.html
+++ b/views/index.html
@@ -31,7 +31,8 @@
     <section></section>
     <!-- Add your site or application content here <ul id="productlist">
      <a href="#" class="btn btn-default" role="button">Button</a>-->
-    <ul id="cart"></ul>
+    <ul id="cart"><h1>Shopping Cart</h1><ul><li>Title: </li><li>Description: </li><li>Price: each</li>
+        <li>Genre:</li><li>Quantitity</li></ul> <br> <br></ul>
 
     <ul id="productlist"></ul>
     <p>Add Categories</p>
@@ -67,9 +68,10 @@
 
                   $(".addToCart").click(function(){
                       console.log(this.id);
-                      console.log(this.shoppingCart);
+
                       $.post("/",
                           {
+                              productID: this.id
                           },
                           function(data){
                               $('#cart').html(data);
