--- a/views/index.html
+++ b/views/index.html
@@ -42,45 +42,7 @@
 {{ >partials/footer }}
 
 {{ >partials/scripts }}
-
+<script src="javascripts/index.js"></script>
 <script src="javascripts/skdslider.js"></script>
-<script>
-
-
-    jQuery(document).ready(function(){
-
-        jQuery('#bannerslider').skdslider({delay:5000, animationSpeed: 1000,'pauseOnHover': true, showNextPrev:true,showPlayButton:false, showNav: true, autoSlide:false,animationType:'sliding'});
-
-
-
-    });
-
-</script>
-
-
-
-<script>
-
-    function loadProducts(){
-
-              $.get("/products", function( data ) {
-                      $('#productlist').html(data);
-
-                  $(".addToCart").click(function(){
-                      console.log(this.id);
-
-                      $.post("/",
-                          {
-                              productID: this.id
-                          },
-                          function(data){
-                              $('#cart').html(data);
-                          });
-                  });
-
-              });
-     };
-
-</script>
 </body>
 </html>
