--- a/views/index.html
+++ b/views/index.html
@@ -44,5 +44,6 @@
 {{ >partials/scripts }}
 <script src="javascripts/index.js"></script>
 <script src="javascripts/skdslider.js"></script>
+<script src="javascripts/main.js"></script>
 </body>
 </html>
