--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -4,8 +4,8 @@
 
         <div class="headersearchbar">
             <div>
-                <input type="search" placeholder="Search stuff">
-                <button><img src="../images/icons/search.png"></button>
+                <input id="search-bar" type="search" placeholder="Search stuff">
+                <button id="searchButton"><img src="../images/icons/search.png"></button>
 
             </div>
         </div>
@@ -14,7 +14,7 @@
             <a href="../users/login"><button class="coloredbutton">Sign in</button></a>
             <a href="../users/register"><button>Register</button></a>
             <a href="../users/profile"><button>Profile</button></a>
-            <a href="../users/cart.html"><button class="cart"><img src="../images/icons/shoppingcart.png"> </button></a>
+            <a href="../users/cart.html"><button class="cart"><img src="../images/icons/shoppingcart.png"></button></a>
         </div>
 
 
