--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -1,10 +1,10 @@
 <header>
     <div class="wrapper">
-        <div class="headerlogo"><a href="../index.html"><img src="../images/Logo/LogoHorizontal.png"> </a></div>
+        <div class="headerlogo"><a href="/index/"><img src="../images/Logo/LogoHorizontal.png"> </a></div>
 
         <div class="headersearchbar">
             <div>
-                <input id="search-bar" type="search" placeholder="Search stuff">
+                <input id="search-bar" type="search" onkeyup="findGame()" placeholder="Search stuff">
                 <button id="searchButton"><img src="../images/icons/search.png"></button>
 
             </div>
@@ -16,7 +16,5 @@
             <a href="../users/profile"><button>Profile</button></a>
             <a href="../users/cart.html"><button class="cart"><img src="../images/icons/shoppingcart.png"></button></a>
         </div>
-
-
     </div>
 </header>
