--- a/views/search.html
+++ b/views/search.html
@@ -3,24 +3,21 @@
 <head>
     {{ >partials/head }}
 </head>
-<body>
+<body onload="searchProducts()">
 
 {{ >partials/header}}
 <div class="wrapper">
 
-
-    <h1>Test</h1>
-    <ul id="productSea
-    rch"></ul>
-    <input type="text" id="showSearch">
-
-
+    <h1>Test Boi</h1>
+    <ul id="productSearch"></ul>
 
 </div>
 {{ >partials/footer }}
 
 {{ >partials/scripts }}
-
+<script src="javascripts/index.js"></script>
+<script src="javascripts/skdslider.js"></script>
+<script src="javascripts/main.js"></script>
 
 </body>
 </html>
