--- a/views/login.html
+++ b/views/login.html
@@ -26,8 +26,8 @@
         <div class="clearfix"></div>
         <hr/>
         <div class="btm-links">
-            <div id="forgot-password"><a href="#">Forgot Your Password?</a></div>
-            <div id="create-account"><a href="/signup">Create An Account</a>
+            <div id="forgot-password"><a href="/users/forgot">Forgot Your Password?</a></div>
+            <div id="create-account"><a href="/users/signup">Create An Account</a>
             </div>
         </div>
         <div class="clearfix"></div>
