--- a/views/product.html
+++ b/views/product.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-{{ >partials/header}}
+{{ >partials/loggedInheader}}
 
 <div class="wrapper">
 <div class="center-vertical" id="DeleteProduct"></div>
