--- a/views/partials/head.html
+++ b/views/partials/head.html
@@ -1,4 +1,4 @@
-
+{{^peek}}
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Home - Generic Games</title>
@@ -11,3 +11,19 @@
 
     <link rel="stylesheet" href="../stylesheets/normalize.css">
     <link rel="stylesheet" href="../stylesheets/main.css">
+{{/peek}}
+
+{{#peek}}
+<meta charset="utf-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
+<title>Home - Generic Games</title>
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="manifest" href="../../site.webmanifest">
+<link rel="apple-touch-icon" href="../../icon.png">
+<!-- Place favicon.ico in the root directory -->
+
+<link rel="stylesheet" href="../../stylesheets/normalize.css">
+<link rel="stylesheet" href="../../stylesheets/main.css">
+{{/peek}}
