--- a/views/search.html
+++ b/views/search.html
@@ -3,7 +3,7 @@
 <head>
     {{ >partials/head }}
 </head>
-<body onload="searchProducts()">
+<body>
 
 {{ >partials/header}}
 <div class="wrapper">
@@ -15,7 +15,7 @@
 {{ >partials/footer }}
 
 {{ >partials/scripts }}
-<script src="javascripts/index.js"></script>
+<script src="javascripts/search.js"></script>
 <script src="javascripts/skdslider.js"></script>
 <script src="javascripts/main.js"></script>
 
