--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
 {{ >partials/head}}
 <link rel="stylesheet" href="../stylesheets/skdslider.css">
 </head>
-<body onload="loadProducts()">
+<body>
 
 {{ >partials/header}}
 
