--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -2,24 +2,34 @@
     <div class="wrapper">
         <div class="headerlogo"><a href="../"><img src="../images/Logo/LogoHorizontal.png"> </a></div>
 
+        <!-- The Search Bar -->
         <div class="headersearchbar">
             <div>
-                <input id="search-bar" type="search" onkeyup="findGame()" placeholder="Search stuff">
-                <button id="searchButton"><img src="../images/icons/search.png"></button>
+                <input id="search-bar" type="search" placeholder="Search stuff">
+                <button id="searchButton" onclick="location.href = 'search'"><img src="../images/icons/search.png">
+                </button>
 
             </div>
         </div>
 
+        <!-- Header Buttons -->
         <div class="headerbuttongroup">
-            <a href="../users/login"><button class="coloredbutton">Sign in</button></a>
-            <a href="../users/register"><button>Register</button></a>
-            <a href="../users/profile"><button>Profile</button></a>
+            <a href="../users/login">
+                <button class="coloredbutton">Sign in</button>
+            </a>
+            <a href="../users/register">
+                <button>Register</button>
+            </a>
+            <a href="../users/profile">
+                <button>Profile</button>
+            </a>
             <div class="dropdown">
-                               <button class="dropbtn"><img src="../images/icons/shoppingcart.png"></button>
-                              <div id="cart" class="dropdown-content">
-                                  <article>There are no items in your cart</article>
-                               </div>
-                           </div>
+                <button class="dropbtn"><img src="../images/icons/shoppingcart.png"></button>
+                <div id="cart" class="dropdown-content">
+                    <article>There are no items in your cart</article>
+                </div>
+            </div>
         </div>
     </div>
 </header>
+
