--- a/views/index.html
+++ b/views/index.html
@@ -36,10 +36,8 @@
     <section></section>
     <!-- Add your site or application content here <ul id="productlist">
      <a href="#" class="btn btn-default" role="button">Button</a>-->
-
-    <ul id="productlist"></ul>
-     <p>Add Categories</p>
-    <p>Display products to the right???</p>
+<h1>Featured Products</h1>
+    <section id="productlist"></section>
 
 </div>
 {{ >partials/footer }}
