--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -211,6 +211,10 @@ button{
     color: #e8e5e0;
 }
 
+#productlist{
+    margin-bottom:30px;
+    width:100%;
+}
 
 .coloredbutton{
     font-family: RalewayBold;
@@ -297,6 +301,28 @@ p{
 .dropdown:hover .dropdown-content {
 
     display: block;
+}
+
+.headerProduct ul{
+    width:100%;
+    list-style: none;
+padding:0;
+}
+
+.headerProduct ul li{
+    width:25%;
+    display:inline-block;
+    margin-right: 7.5%;
+}
+
+.headerProductImage{
+    width:100%;
+    height:100px;
+    height: 75px;
+}
+
+.headerQty{
+    width:5% !important;
 }
 
 
