--- a/views/payment.html
+++ b/views/payment.html
@@ -15,37 +15,37 @@
             <div clas="col-xs-12">
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" class="form-control" required>
+                    <input type="text" id="name" class="form-control" name="name" required>
                 </div>
             </div>
             <div clas="col-xs-12">
                 <div class="form-group">
                     <label for="address">Address</label>
-                    <input type="text" id="address" class="form-control" required>
+                    <input type="text" id="address" class="form-control" name="address" required>
                 </div>
             </div>
             <div clas="col-xs-12">
                 <div class="form-group">
                     <label for="card-number">Card No.</label>
-                    <input type="text" id="card-number" class="form-control" required>
+                    <input type="text" id="card-number" class="form-control" name="cardNo" required>
                 </div>
             </div>
             <div clas="col-xs-12">
                 <div class="form-group">
                     <label for="card-expiry-month">Card Expiration Month</label>
-                    <input type="text" id="card-expiry-month" class="form-control" required>
+                    <input type="text" id="card-expiry-month" class="form-control" name="expMo" required>
                 </div>
             </div>
             <div clas="col-xs-12">
                 <div class="form-group">
                     <label for="card-expiry-year">Card Expiration Year</label>
-                    <input type="text" id="card-expiry-year" class="form-control" required>
+                    <input type="text" id="card-expiry-year" class="form-control" name="expYear" required>
                 </div>
             </div>
             <div clas="col-xs-12">
                 <div class="form-group">
                     <label for="card-expiry-year">CVC</label>
-                    <input type="text" id="cvc" class="form-control" required>
+                    <input type="text" id="cvc" class="form-control" name="cvc" required>
                 </div>
             </div>
             <button class="btn btn-primary button-pay" type="submit">Pay</button>
